# shell_scripts

./: lldbinit  mylspconfig.lua  renamer_bonus.sh  tigrc  vimrc  zshrc
42/: CMakeLists.txt  _clang-format  _clang-format_norm_format  lldbinit
vim/: init.vim  nvim-compe.vim  vimrc
vim/ftdetect/: clang_format.vim
vim/lua/: nvim-tree-config.lua
